--- a/www/.env.example
+++ b/www/.env.example
@@ -38,6 +38,6 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-DROPBOX-APP-KEY=52o83zgl7osezxj
-DROPBOX-APP-SECRET=ic8b2jat4j9lbgw
-DROPBOX-APP-TOKEN=tV8Rt6e2XBAAAAAAAAAAp2DO_nDBt8VznzXAGKGoPI9u6g3WRm1NstXHHam-zEMd
+DROPBOX-APP-KEY=
+DROPBOX-APP-SECRET=
+DROPBOX-APP-TOKEN=
